--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -99,7 +99,7 @@
 .footer {
   background: #f3f4f6;
   padding: 20px;
-  text-align: center;
+  text-align: left;
 }
 
 .footer ul {
@@ -137,7 +137,7 @@ body {
   align-items: center;
   gap: 20px;
   padding: 10px 20px;
-  background-color: #fafafa; /* cor clara para destacar */
+  background-color: #fafae5; /* cor clara para destacar */
   border-bottom: 1px solid #ddd;
   overflow-x: auto; /* permite rolar horizontalmente se houver muitas categorias */
   white-space: nowrap;
@@ -145,13 +145,13 @@ body {
 
 .category-link {
   text-decoration: none;
-  color: #333;
-  font-size: 14px;
+  color: #070707;
+  font-size: 20px;
   padding: 5px 10px;
   transition: background-color 0.2s, color 0.2s;
 }
 
 .category-link:hover {
-  background-color: #e5e5e5;
+  background-color: #afecaf;
   color: #000;
 }
