--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -90,8 +90,8 @@
 }
 
 .product-card img {
-  max-width: 100%;
-  height: 150px;
+  width: 250px;
+  height: auto;
   object-fit: cover;
 }
 
@@ -236,9 +236,25 @@ body {
 }
 
 .copyright {
-  background-color: #111;  /* cor de fundo escura */
-  color: #fff;             /* texto branco */
   text-align: center;
-  padding: 2px 0;
+  padding: 10px;
+  background: #f1f1f1; /* cor de fundo clara */
   font-size: 14px;
+}
+
+.copyright .icon {
+  width: 18px;
+  height: 18px;
+  vertical-align: middle;
+  margin: 0 5px;
+}
+
+.copyright a {
+  color: #000;
+  text-decoration: none;
+  margin: 0 8px;
+}
+
+.copyright a:hover {
+  text-decoration: underline;
 }
