--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -77,22 +77,45 @@
 /* Product grid */
 .product-grid {
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
   gap: 20px;
-  padding: 20px;
 }
 
 .product-card {
-  border: 1px solid #ddd;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between; /* força botão ficar alinhado */
+  align-items: center;
   padding: 15px;
-  border-radius: 8px;
-  text-align: center;
+  border: 1px solid #ddd;
+  border-radius: 10px;
+  background: #fff;
 }
 
 .product-card img {
-  width: 250px;
-  height: auto;
+  width: 50%;
+  max-height: 200px;
   object-fit: cover;
+}
+
+.product-card h3,
+.product-card p {
+  margin: 10px 0;
+  text-align: center;
+}
+
+.product-card button {
+  margin-top: auto; /* empurra o botão pro final do card */
+  background: green;
+  color: white;
+  border: none;
+  padding: 10px 20px;
+  border-radius: 5px;
+  cursor: pointer;
+}
+
+.product-card button:hover {
+  background: darkgreen;
 }
 
 .footer {
@@ -183,56 +206,6 @@ body {
 .category-link:hover {
   background-color: #caf4ca;
   color: #000;
-}
-
-.pre-footer {
-  display: flex;
-  justify-content: space-around;
-  align-items: flex-start;
-  background-color: #f5f5f5;
-  padding: 30px 20px;
-  border-top: 1px solid #ddd;
-  border-bottom: 1px solid #ddd;
-  text-align: center;
-}
-
-.pre-footer-item {
-  max-width: 300px;
-  padding: 10px;
-}
-
-.pre-footer-item img {
-  width: 50px;
-  height: 50px;
-  margin-bottom: 10px;
-}
-
-.pre-footer-item h4 {
-  margin-bottom: 8px;
-  font-size: 16px;
-  font-weight: bold;
-  color: #222;
-}
-
-.pre-footer-item p {
-  color: #555;
-  font-size: 14px;
-}
-
-.faixas-brasil {
-  width: 100%;
-}
-
-.faixa {
-  height: 8px; /* Ajuste a espessura */
-}
-
-.faixa.verde {
-  background-color: #c1f9d6; /* Verde da bandeira */
-}
-
-.faixa.amarela {
-  background-color: #f8ecc5; /* Amarelo da bandeira */
 }
 
 .copyright {
