--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -62,11 +62,11 @@
   background: #20037e; /* Azul escuro */
   margin-top: 250px;
   border: none;
-  padding: 12px 24px;
-  font-size: 16px;
+  padding: 15px 25px;
+  font-size: 18px;
   font-weight: bold;
   color: white;
-  border-radius: 6px;
+  border-radius: 8px;
   cursor: pointer;
   transition: 0.3s;
 }
@@ -111,9 +111,11 @@
   background: green;
   color: white;
   border: none;
-  padding: 10px 20px;
-  border-radius: 5px;
+  padding: 15px 25px;
+  border-radius: 8px;
   cursor: pointer;
+  font-weight: bold;
+  font-size: 18px;
 }
 
 .product-card button:hover {
