--- a/frontend/src/pages/ProductPage.css
+++ b/frontend/src/pages/ProductPage.css
@@ -56,7 +56,7 @@
     font-weight: bold;
   }
   
-  .product-description, .product-shipping {
+   .product-shipping {
     margin-top: 20px;
   }
   
